Fixed Overflow in Listings

--- a/src/components/Listing.css
+++ b/src/components/Listing.css
@@ -44,6 +44,7 @@
   text-align: center;
   text-decoration: none;
   color: #000000;
+  overflow: hidden;
 }
 
 
@@ -103,4 +104,5 @@
   text-align: center;
   text-decoration: none;
   color: #000000;
+  overflow: hidden;
 }
